ev_site_macros/tests/fail/unknown_tier.rs
use ev_site_macros::tiered;

fn main() {
	tiered! {
		Block { tier: P9 }
	};
}
